feat: update router and user models
