# routers/api/v1/user.go
@@ -15,6 +15,13 @@ func InitializedUserHandler(db *gorm.DB) {
 	userHandler = models.NewUserHandler(db)
 }
 
+// @Summary Get a Single User
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {object} models.User
+// @Failure 400 {object} string
+// @Failure 404 {object} string
+// @Router /users/{id} [get]
 func GetUser(c *gin.Context) {
 	idString := c.Param("id")
 	idInt, err := strconv.Atoi(idString)
@@ -32,10 +39,15 @@ func GetUser(c *gin.Context) {
 		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
 		return
 	}
-	
+
 	c.JSON(http.StatusOK, user)
 }
 
+// @Summary Get a All User
+// @Produce json
+// @Success 200 {object} []models.User
+// @Failure 500 {object} string
+// @Router /users [get]
 func GetUsers(c *gin.Context) {
 	users, err := userHandler.GetUsers()
 
@@ -47,6 +59,14 @@ func GetUsers(c *gin.Context) {
 	c.JSON(http.StatusOK, users)
 }
 
+// @Summary Create a User
+// @Accept json
+// @Produce json
+// @Param user body models.User true "User"
+// @Success 201 {object} models.User
+// @Failure 400 {object} string
+// @Failure 500 {object} string
+// @Router /users [post]
 func CreateUser(c *gin.Context) {
 	var user models.User
 
@@ -63,9 +83,22 @@ func CreateUser(c *gin.Context) {
 	c.JSON(http.StatusCreated, user)
 }
 
+// @Summary Update a User
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Param user body models.User true "User"
+// @Success 200 {object} models.User
+// @Failure 400 {object} string
+// @Failure 500 {object} string
+// @Router /users/{id} [put]
 func UpdateUser(c *gin.Context) {
 	idString := c.Param("id")
 	idInt, err := strconv.Atoi(idString)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user id"})
+		return
+	}
 	idUint := uint(idInt)
 
 	var user models.User
@@ -84,10 +117,22 @@ func UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
+// @Summary Delete a User
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 204
+// @Failure 500 {object} string
+// @Router /users/{id} [delete]
 func DeleteUser(c *gin.Context) {
-	id := c.Param("id")
+	idString := c.Param("id")
+	idInt, err := strconv.Atoi(idString)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user id"})
+		return
+	}
+	idUint := uint(idInt)
 
-	err := userHandler.DeleteUser(id)
+	err = userHandler.DeleteUser(idUint)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error deleting user"})
 		return
